--- a/webapp/ridlr/frontend/ridlr/package.json
+++ b/webapp/ridlr/frontend/ridlr/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "react": "^16.13.0",
+    "react-countdown": "^2.2.1",
     "react-dom": "^16.13.0",
     "react-markdown": "^4.3.1",
     "react-scripts": "3.4.0",
