--- a/webapp/ridlr/frontend/ridlr/package.json
+++ b/webapp/ridlr/frontend/ridlr/package.json
@@ -11,6 +11,7 @@
     "react-countdown": "^2.2.1",
     "react-dom": "^16.13.0",
     "react-markdown": "^4.3.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1"
   },
